Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Fixed error on searching when directory title field was not string
- Allowed vocabulary with int keys to be used by CPSDirectoryEntryWidget (SQL 
  Directories generates them)
- Fixed problem with required MultiEntry Directory Widget that was accepting 
  empty values
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-