@@ -11,6 +11,7 @@ Bug fixes:
   Directories generates them)
 - Fixed problem with required MultiEntry Directory Widget that was accepting 
   empty values
+- Fixed error when newly added schemas_search / schemas are None
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
